Remove html files

--- a/Analysis/Recommendation System.Rmd
+++ b/Analysis/Recommendation System.Rmd
@@ -2,7 +2,7 @@
 title: "Recommendation System"
 output:
   prettydoc::html_pretty:
-    theme: tactile
+    theme: leonids
     highlight: github
 ---
 
