--- a/Analysis/Text Analysis.Rmd
+++ b/Analysis/Text Analysis.Rmd
@@ -27,7 +27,7 @@ library(caret)
 
 
 ```{r read data, echo=FALSE}
-dat <- fread(input = '../Data/winemag-data-130k-v2.csv',verbose = FALSE,na.strings=c(""))
+dat <- fread(input = '../Data/wine.clean.csv',verbose = FALSE,na.strings=c(""))
 dat <- dat[,-1]
 
 ```
