--- a/Report/ADSreport-5.7.Rmd
+++ b/Report/ADSreport-5.7.Rmd
@@ -157,6 +157,16 @@ lm.coefs[, Coef.Lower.95 := Estimate - z * `Std. Error`]
 lm.coefs[, Coef.Upper.95 := Estimate + z * `Std. Error`]
 return(lm.coefs[])
 }
+
+linear.regression.summary <- function(lm.mod, digits = 3, alpha = 0.05) {
+lm.coefs <- as.data.table(summary(lm.mod)$coefficients,
+keep.rownames = TRUE)
+setnames(x = lm.coefs, old = "rn", new = "Variable")
+z <- qnorm(p = 1 - alpha/2, mean = 0, sd = 1)
+lm.coefs[, Coef.Lower.95 := Estimate - z * `Std. Error`]
+lm.coefs[, Coef.Upper.95 := Estimate + z * `Std. Error`]
+return(lm.coefs[])
+}
 ```
 
 
@@ -252,17 +262,19 @@ datatable(dat[1:5,])
 
 # Examination of the Data
 
-<p> We first checked the percentage of missing vlaues for each varible. **Country, province, region_1 and region_2** are varibales giving geographic information about the wine, since the majority of **region_2** and 16.4% of **region_1** are missing, we choose to focus on **country** unless more detailed geographic information are needed. We also assign the value of the highest level region to the lowest level for the missing components. </p>
+<p> We first checked the percentage of missing values for each variable. **Country, province, region_1 and region_2** are varibales giving geographic information about the wine, since the majority of **region_2** and 16.4% of **region_1** are missing, we choose to focus on **country** unless more detailed geographic information are needed. We also assign the value of the highest level region to the lowest level for the missing components. </p>
 
-We then examined the unique values for each varible. **Designation, winery, title** have many unique values, hence we decided to treat them as random effects but not predictors when modeling.<br>
+We then examined the unique values for each variable. **Designation, winery, title** have many unique values, hence we decided to treat them as random effects but not predictors when modeling.<br>
 
-**Price** of the wine ranges from 4 to 3300 with some extreme values. We then visualized **price** removed all the variable that were NA. 
+**Price** of the wine ranges from 4 to 3300 with some extreme values. We then visualized **price** removed all the variable that was NA. 
 
 Variable **points** ranges from 80 to 100. Its distribution was close to a bell shape. <br>
 
-**Description**, **taster_name** and **taster_twitter_handle** provides information about the taster and their reviews on the wine. We examined these variables later based on the needs for text anlysis and recommendation systems building. We also assumed tha the the missing values for taster name were submitted anomymously. Those value have been altered to reflect anomymous. 
+**Description**, **taster_name** and **taster_twitter_handle** provides information about the taster and their reviews on the wine. We examined these variables later based on the needs for text analysis and recommendation systems building. We also assumed that the missing values for taster name were submitted anonymously. Those values have been altered to reflect anonymous. 
 
-**Designation** We reseached wine designation to further understand Wine Designation and according to Napa Valley Vinters: Vineyard Designations Optional. Many wineries name the vineyard where the grapes were grown because the winery believes the property produces an unusually high-quality grape. The winery or an independent grower may own the vineyard. When using a vineyard designation on a wine label, federal regulations require that 95% of the grapes be grown in the named vineyard.
+**Designation** We researched wine designation to further understand Wine Designation and according to Napa Valley Vinters: Vineyard Designations Optional. Many wineries name the vineyard where the grapes were grown because the winery believes the property produces an unusually high-quality grape. The winery or an independent grower may own the vineyard. When using a vineyard designation on a wine label, federal regulations require that 95% of the grapes be grown in the named vineyard.
+
+
 
 ```{r percentage missing}
 tab  <- dat[,lapply(X=.SD,FUN="miss.value")]
@@ -313,11 +325,13 @@ paste0( dat.row - nrow(dat), ' rows were removed or ', round((dat.row / nrow(dat
 ## 1. Sentiment Analysis 
 ### Overview of *Description*
 
-Suppose we are exploring sales status of different wines in our website. What do we care about most? The answer might be the *Final Point* the testers give out. But some reality need to be considered. 
+Suppose we are exploring sales status of different wines in our website. What do we care about the most? The answer might be the `r points.name` the testers give out. But some reality need to be considered. 
 First of all, the dataset we have only includes data with points above 80. Comparing to our scoring scale, which is 0-100, scores from 80 to 100 have a strong indication that the testers are relatively like this kind of wine. Under this circumstance, how can we specify the difference among them? 
-Second, when customers evaluate a product, their evaluation objects vary. Some people focus on the taste while others prefer the looks and smell. As what we get from Final Point is just the final evaluation, we cannot tell which aspect this tester pay attention to. However, when recommending product to users, it could be more precise if you know about his or her preference on which aspect he or she focuses on. 
-From the reason above, *Final Point* is not enough for us to make an accurate conclusion on customers exact evaluation on this type of wine. Thus, we should take a look at *Description* ,which gives us more details.
+Second, when customers evaluate a product, their evaluation objects vary. Some people focus on the taste while others prefer the looks and smell. As what we get from Final Point is just the final evaluation, we cannot tell which aspect this tester pay attention to. However, when recommending a product to users, it could be more precise if you know about his or her preference on which aspect he or she focuses on. 
+From the reason above, `r points.name` is not enough for us to make an accurate conclusion on customers exact evaluation of this type of wine. Thus, we should take a look at `r description.name` , which gives us more details.
+
 In order to analyze this text variable, we first take a look at the words' length. We split every sentence into words and draw a distribution of words' length. We find that it is close to a normal distribution with mean is roughly 45 words per description, which is a good start.
+
 
 ```{r}
 # filter data set
@@ -338,9 +352,10 @@ ggplot(data = subdat, aes(x = descriptioncount)) + geom_histogram(bins=30, fill 
  ylim(0,25000) 
 ```
 
-To give a accurate evaluation, we start from estimating sentiment behind descriptioin, which is sentiment analysis. There's a default classification criteria of "negative" and "positive", which helps us to roughly divide description into two categories. From the result,we get more positive descriptions than negative one which kind of makes sense because we just use data with points from 80 to 100. There, the proportion of positive description is 79% and that of negative description is roughly 21%.
+To give an accurate evaluation, we start from estimating sentiment behind description, which is sentiment analysis. There are a default classification criteria of "negative" and "positive", which helps us to roughly divide description into two categories. From the result, we get more positive descriptions than negative one which kind of makes sense because we just use data with points from 80 to 100. There, the proportion of positive description is 79% and that of negative description is roughly 21%.
 
-The result kind of shows discrepancy. As we mention above, we shift data with points above 80, which is a relatively higher score with scale from 0 to 100. We didn't expect negative description that much. In order to have a more realistic understanding of the result, we create a new scale which is from 80 to 100 and we assume points above 90 is "positive" points while points below 90 is "negative" points.Thus, we make a prediction the distribution of new-scaled points is consistent with the description of negative and positive. However, from what we get we conclude that the prediction is not correct, which indicates that although the final point is positive, we still have negative desription. Thus, it's necessary to analyze description with more specific classification which is text analysis.
+The result kind of shows discrepancy. As we mention above, we shift data with points above 80, which is a relatively higher score with a scale from 0 to 100. We didn't expect a negative description that much. In order to have a more realistic understanding of the result, we create a new scale which is from 80 to 100 and we assume points above 90 is "positive" points while points below 90 is "negative" points. Thus, we make a prediction the distribution of new-scaled points is consistent with the description of negative and positive. However, from what we get we conclude that the prediction is not correct, which indicates that although the final point is positive, we still have negative description. Thus, it's necessary to analyze description with a more specific classification which is text analysis.
+
 
 ```{r sentiment analysis}
 
@@ -360,10 +375,12 @@ ggplot(aes(x=sentiment,y=n, fill=sentiment)) + geom_col() +
 
 ## Sentiment analysis of different countries
 
-There are two main factors which influence the quality of a type of wine, one is natural cause and one is man-made cause. The country of origin is the important component in natural cause. Thus, we want to specify if wines from different countries will have different descriptions from testers. With the sentiment perspective, it will be shown as the difference in the distribution of negative and positive sentiment in description.
-Then, we draw a graph of sentiment distribution to see the difference among wines from different counties. As some countries’ wine do not have sufficient recorded review, we just show countries with large amount of data. 
+There are two main factors which influence the quality of a type of wine, one is a natural cause and one is a man-made cause. The country of origin is an important component in natural cause. Thus, we want to specify if wines from different countries will have different descriptions from testers. With the sentiment perspective, it will be shown as the difference in the distribution of negative and positive sentiment in the description.
 
-From the result, we can tell that there exists difference among countries. Meanwhile, wines that from most of the famous places like, France, South Africa have the larger proportion of positive description which is consistent with our intuition.
+Then, we draw a graph of sentiment distribution to see the difference among wines from different counties. As some countries’ wine does not have sufficient recorded review, we just show countries with a large amount of data. 
+
+From the result, we can tell that there exists a difference among countries. Meanwhile, wines that from most of the famous places like, France, South Africa have a larger proportion of positive description which is consistent with our intuition.
+
 
 
 ```{r }
@@ -386,7 +403,7 @@ ggplot(aes(x= country , y=proportion,fill=sentiment)) + geom_col() +
 
 ## Other interesting finding
 
-Dividing sentiment in "negative" and "positive" is somewhat sketchy and we have other way to make a more specific classfication. We extract more emotions from descriptions such as "disgust","joy" etc. To our surprise, there exists words containing sentiment like "anger","sad" which seems a little bit strange in a wine description. This interesting finding gives us more hint on our further text analysis.
+Dividing sentiment in "negative" and "positive" is somewhat sketchy and we have another way to make a more specific classification. We extract more emotions from descriptions such as "disgust", "joy" etc. To our surprise, there exist words containing sentiment like "anger", "sad" which seems a little bit strange in a wine description. This interesting finding gives us more hint on our further text analysis.
 
 ```{r}
 subdat %>%
@@ -429,12 +446,12 @@ inner_join(get_sentiments('nrc')) %>%
 ```
 
 # 2. Text Analysis
-
-The sentiment analysis shows there exits relationship between reviews and points, which is consistent with our common sense. In this part, we continued analyzing wines' review.
+The sentiment analysis shows there exists a relationship between reviews and points, which is consistent with our common sense. In this part, we continued analyzing wines' review.
 
 ## 1.1 The length of reviews
 
-The plot below shows that the wines with longer reviews tend to have higher points. So texters usually have more opinions to share when he/she thinks the wine is great. It is also worth to notice that the variance of text length tend to be bigger if the wine has higher points. It may imply that even the good wines usually have longer reviews, the length is also influenced by many other factors, such as ttesters' habits. But if the wine is not so good, testers always have less to write down.
+The plot below shows that the wines with longer reviews tend to have higher points. So texters usually have more opinions to share when he/she thinks the wine is great. It is also worth to notice that the variance of text length tend to be bigger if the wine has higher points. It may imply that even the good wines usually have longer reviews, the length is also influenced by many other factors, such as testers' habits. But if the wine is not so good, testers always have less to write down.
+
 
 ```{r text_length, warning=FALSE}
 textdat <- dat[,.(description=as.character(get(description.name)),
@@ -454,13 +471,13 @@ ggplot(textdat,aes(x=textlen,fill=points.group))+
 
 ## 2. Data Pipeline
 
-Before analysis on text data, we did some preparation. 
+Before the analysis of text data, we did some preparation. 
   
 - **Tokenization**: Cut the reviews into single words to calculate the frequency of their appearance.
 
-- **Remove "stopwords"**: Remove "stopwords" such as "the", "a", "are", which are meaningless but necessary in sentence. 
+- **Remove "stopwords"**: Remove "stopwords" such as "the", "a", "are", which are meaningless but necessary in the sentence. 
 
-- **Stem the words**: Stem the words in order to reduce the number of total different words appeare in the reviews. For example, this step change "fruit", "fruity", "fruits" all into "fruiti". Even though "fruiti" is not actually a word, it is still understandable.
+- **Stem the words**: Stem the words in order to reduce the number of total different words appear in the reviews. For example, this step change "fruit", "fruity", "fruits" all into "fruiti". Even though "fruiti" is not actually a word, it is still understandable.
 
 
 ```{r tokenization}
@@ -498,6 +515,7 @@ TF-IDF is a powerful technique for enhancing the information contained within ou
 
 - Penalize terms occur frequency across corpus and inverse document frequency (IDF) 
 
+
 ```{r TF-IDF}
 var.chosen <-c('fruit','acid','palat','aroma','cherri','tannin','ripe','dri','spice','rich','fresh',
               'berri','oak','plum','textur','sweet','appl','full','blend','balanc','bodi','blackberri',
@@ -522,11 +540,12 @@ text.tokens.tfidf <-  apply(train.tokens.df.norm, 2, tf.idf, idf = text.tokens.i
 round(text.tokens.tfidf[1:10, 1:6],2)
 ```
 
-For example, in the text 1, fruit has a lower score than acid. We believe that "fruit" has less information because most of reviews include "fruit". On the contrary, acidity is more useful in this case, since only part of the wines are acid, which makes it more unique and characteristic, and more suitable as a variable.
+For example, in the text 1, fruit has a lower score than acid. We believe that "fruit" has less information because most of the reviews include "fruit". On the contrary, acidity is more useful in this case, since only part of the wines is acid, which makes it more unique and characteristic, and more suitable as a variable.
 
-##2.4 Prediction
+## 2.4 Prediction
 
-Based on wordcloud plot and TF-IDF, we selected top 100 frequetent words. Then we delected some meaningless words for this project, such as "wine","well","show" and etc. In the end, we chose 58 words as our new variables. 
+Based on the word cloud plot and TF-IDF, we selected the top 100 frequent words. Then we deleted some meaningless words for this project, such as "wine", "well", "show" and etc. In the end, we chose 58 words as our new variables. 
+
 
 ```{r train_test}
 #dim(text.tokens.matrix)
@@ -542,10 +561,14 @@ test = text.tokens.df[-indexes,]
 formula.points <- create.formula(outcome.name="points",input.names=var.chosen)
 the.formula <- reduce.formula(dat = train, the.initial.formula = formula.points)
 model <- lm(formula = the.formula, data=train)
-summary(model)
+
+
+lm.model.summary <- linear.regression.summary(model)[,c(1:3,5:7)]
+
+datatable(lm.model.summary)
 ```
 
-F statistic is 483.7 and p-value is smaller than $2.2*10^{-16}$. Thus, the model is significant. Also, most variables are significant in this model. But adjusted R-squared is 0.2353, which is not really high. Considering that testers may not write down all aspect of a wine and the standard of valuating a wine is rather compelecated, we still think this is a nice try.
+F statistic is 483.7 and p-value is smaller than $2.2*10^{-16}$. Thus, the model is significant. Also, most variables are significant in this model. But adjusted R-squared is 0.2353, which is not really high. Considering that testers may not write down all aspect of a wine and the standard of evaluating a wine is rather complicated, we still think this is a nice try.
 
 ```{r predict}
 test$points.est <- predict(model,newdata=test)
@@ -567,16 +590,16 @@ ggplot(data = test,aes(x= points.diff,y=..density..)) +
   theme(plot.title = element_text(hjust = 0.5)) 
 ```
 
-
-Limitations for text analysis:<br>
+## Limitations for text analysis:<br>
 First, if we're using each unique word as a predictor to fit the model, the number of predictors will explode really fast. Even though we did data cleaning such as removing unwanted words and symbols, it's not ideal to go over every word.  <br>
 
-Second, we built a linear regression model. Among the words with high frequency, we manully selected some words as the predictors based on the domain knowledge. For example, *fruit*,*cherri*,*plum*,*oak*,*chocol*, are the some common words used for describing the flavors of the wine. Therefore, the result is interpretable since each predictor is a meaningful word realted to the wine. However, since we're focusing on high frequency words,it's hard get a thorough exploration of descriptions. Also, as this a manually process, any change in the dataset will impact the significance of these predictors.<br>
+Second, we built a linear regression model. Among the words with high frequency, we manually selected some words as the predictors based on the domain knowledge. For example, *fruit*,*cherri*,*plum*,*oak*,*chocol*, are some common words used for describing the flavors of the wine. Therefore, the result is interpretable since each predictor is a meaningful word related to the wine. However, since we're focusing on high-frequency words, it's hard to get a thorough exploration of descriptions. Also, as this a manually process, any change in the dataset will impact the significance of these predictors.<br>
 
-Lastly, when building the model, all the words are coming from previous dataset which means we draw conclusions based on that. When there's a new word coming up in the descriptions, we won't be able to handle that. This is no longer the situation where a new observation brings new values for existing predictors, but the case when a new observation brings new predictors. <br>
+Lastly, when building the model, all the words are coming from the previous dataset which means we draw conclusions based on that. When there's a new word coming up in the descriptions, we won't be able to handle that. This is no longer the situation where a new observation brings new values for existing predictors, but the case when a new observation brings new predictors. <br>
 
-# Areas of Future Investigation
-To tackle the limitaions for text analysis in this project, we tried another approach. We first followed the same procedure for text cleaning. After getting the word-document matrix, we used SVD (singluar vector decomposition) to reduce the number of predictors. However, to use SVD, we need to fully trust the math since each column is no longer a word that we can intepret. There were signals missing in the dimension reduction process and we didn't know what those are. Then we built a decison tree model to predict points. However, our model ended up predicting the same point for all the wine, hence we ended up going back to the original method for now. Even so, this is something interesting for us to do future investigation. A plausible step is to investigate on feature engineering. <br>
+## Areas of Future Investigation
+To tackle the limitations of text analysis in this project, we tried another approach. We first followed the same procedure for text cleaning. After getting the word-document matrix, we used SVD (singular vector decomposition) to reduce the number of predictors. However, to use SVD, we need to fully trust the math since each column is no longer a word that we can interpret. There were signals missing in the dimension reduction process and we didn't know what those are. Then we built a decision tree model to predict points. However, our model ended up predicting the same point for all the wine, hence we ended up going back to the original method for now. Even so, this is something interesting for us to do a future investigation. A plausible step is to investigate on feature engineering. <br>
+
 
 # 3. Recommendation System
 
